--- a/systemcode/client/src/pages/login/login.css
+++ b/systemcode/client/src/pages/login/login.css
@@ -48,6 +48,10 @@
     background-color: transparent;
 }
 
+.loginButton:disabled {
+    cursor: not-allowed;
+}
+
 .loginRegisterButton {
     font-family: 'Shadows Into Light', cursive;
     font-size: 50px;
